# swarmbench-code-task

./: .gitignore  LICENSE  README.md  decomposition.yaml  gap_strategy.md  instruction.md  task.toml
environment/: Dockerfile
environment/input_artifacts/: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  dataset.csv  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
environment/input_artifacts/core/settings/: base.py
environment/input_artifacts/orders/: views.py
environment/input_artifacts/users/: admin.py  forms.py  managers.py  models.py
solution/: solve.sh
tests/: judge.py  oracle.json  test.sh  test_logic.py
