[tool.poetry]
name = "e-soko"
version = "0.1.0"
description = "E-Soko is an open-source Django e-commerce platform designed for real-world deployments, with integrated M-Pesa payments and end-to-end order workflows."
authors = ["Mike <lelimike@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = ">=4.2,<5.0"
django-environ = ">=0.12.0,<0.13.0"
celery = "^5.4"
redis = "^5.0"
django-allauth = "^65.13.1"
django-crispy-forms = "^2.5"
pillow = "^12.1.0"
qrcode = "^8.2"
requests = "^2.32.5"
cryptography = "^46.0.3"
weasyprint = "^67.0"
stripe = "^14.1.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
django-ninja = "^1.5.2"
djangorestframework-simplejwt = "^5.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
